web-design-final

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p><em>I would like to show my appreciation to Wendy for being such a cool teacher, being patient with her students and always having a positive attitude.</em></p>
 
       <h2>Web Design Is The Best</h2>
-      <p id="text">Yaaay web design!!</p>
+      <p id="text">Welcome To My Website</p>
 
       <h3>Next Semester</h3>
       <p><strong>I hope to see you next semester</strong></p>
@@ -38,7 +38,7 @@
       <p><i>Almost there!!</i></p>
 
       <h6>Last Header</h6>
-      <p>Noicee</p>
+      <p>Got It!!</p>
     </section>
     <section class="section2">
       <span>Graphic Design is my passion</span>
@@ -57,26 +57,25 @@
     
       <article>
         <ol>
-          <li>Crack the eggs in a bowl</li>
-          <li>Mix it with milk</li>
-          <li>Cook it on a pan</li>
-          <li>Bon appetit</li>
+          <li>Turn on your laptop</li>
+          <li>Go on code pen</li>
+          <li>Fork it</li>
+          <li>Start Coding!!</li>
         </ol>
     </article>
     </section>
 
     <figure>
       
-      <img src="img/wendy.png"
-           alt="Wendy">
-      <blockquote cite="https://wendywarren.ca/">
-        <p>Wendy's Website</p>
+      <img src="img/web-design"
+           alt="Web Design">
+      <blockquote cite="https://Images.com/">
+        <p>Web Design</p>
       </blockquote>
-          <figcaption>Wendy's Website<cite>Wendy Image</cite></figcaption>
+          <figcaption>Image <cite>Web Design Image</cite></figcaption>
     </figure>
 
-    <p>When Ice Spice tells Pink Pantthress<q >He say that I'm good enough, grabbin' my duh-duh-duh
-      Thinkin' 'bout shit that I shouldn't have </q></p>
+    <p>They told the students<q>Make your own luck</q></p>
   
 
   </main>
@@ -84,5 +83,5 @@
 
 <footer>
   <button>Subscribe to Web Design!</button>
-  <small>I hope you enjoyed this website this is a Wendy fan cite</small>
+  <small>I hope you enjoyed this website</small>
 </footer>
